exports[`Menu tests > a11y and snapshots #0`] = `
<div id="wrapper" style="display: inline-block;">
  <div style="padding: 10px;">
    <div class="denhaag-menu" id="menu">
      <a
        href="https://github.com/nl-design-system/denhaag"
        class="denhaag-menu-button"
        title="Label"
        >Label</a
      ><a
        href="https://github.com/nl-design-system/denhaag"
        class="denhaag-menu-button denhaag-menu-button--active"
        title="Label 2"
        >Label 2</a
      ><button
        class="denhaag-menu-button denhaag-menu-button--expandable"
        title="Label 3"
      >
        Label 3<span class="denhaag-menu-button__chevron"
          ><svg
            width="1em"
            height="1em"
            viewBox="0 0 24 24"
            fill="none"
            xmlns="http://www.w3.org/2000/svg"
            class="MuiSvgIcon-root denhaag-icon"
            focusable="false"
            aria-hidden="true"
            shape-rendering="auto"
            aria-label="ChevronDownIcon"
          >
            <path
              d="M5.293 8.293a1 1 0 011.414 0L12 13.586l5.293-5.293a1 1 0 111.414 1.414l-6 6a1 1 0 01-1.414 0l-6-6a1 1 0 010-1.414z"
              fill="currentColor"
            ></path></svg
        ></span></button
      ><button
        class="denhaag-menu-button denhaag-menu-button--expandable denhaag-menu-button--active"
        title="Label 4"
      >
        Label 4<span class="denhaag-menu-button__chevron"
          ><svg
            width="1em"
            height="1em"
            viewBox="0 0 24 24"
            fill="none"
            xmlns="http://www.w3.org/2000/svg"
            class="MuiSvgIcon-root denhaag-icon"
            focusable="false"
            aria-hidden="true"
            shape-rendering="auto"
            aria-label="ChevronDownIcon"
          >
            <path
              d="M5.293 8.293a1 1 0 011.414 0L12 13.586l5.293-5.293a1 1 0 111.414 1.414l-6 6a1 1 0 01-1.414 0l-6-6a1 1 0 010-1.414z"
              fill="currentColor"
            ></path></svg
        ></span>
      </button>
    </div>
  </div>
</div>
`;

exports[`Menu tests > a11y and snapshots #1`] = `
<div id="wrapper" style="display: inline-block;">
  <div style="padding: 10px;">
    <button
      class="denhaag-menu-button denhaag-menu-button--expandable"
      title="Label"
    >
      Label<span class="denhaag-menu-button__chevron"
        ><svg
          width="1em"
          height="1em"
          viewBox="0 0 24 24"
          fill="none"
          xmlns="http://www.w3.org/2000/svg"
          class="MuiSvgIcon-root denhaag-icon"
          focusable="false"
          aria-hidden="true"
          shape-rendering="auto"
          aria-label="ChevronDownIcon"
        >
          <path
            d="M5.293 8.293a1 1 0 011.414 0L12 13.586l5.293-5.293a1 1 0 111.414 1.414l-6 6a1 1 0 01-1.414 0l-6-6a1 1 0 010-1.414z"
            fill="currentColor"
          ></path></svg
      ></span>
    </button>
  </div>
  <div style="padding: 10px;">
    <button
      class="denhaag-menu-button denhaag-menu-button--expandable denhaag-menu-button--active"
      title="Label"
    >
      Label<span class="denhaag-menu-button__chevron"
        ><svg
          width="1em"
          height="1em"
          viewBox="0 0 24 24"
          fill="none"
          xmlns="http://www.w3.org/2000/svg"
          class="MuiSvgIcon-root denhaag-icon"
          focusable="false"
          aria-hidden="true"
          shape-rendering="auto"
          aria-label="ChevronDownIcon"
        >
          <path
            d="M5.293 8.293a1 1 0 011.414 0L12 13.586l5.293-5.293a1 1 0 111.414 1.414l-6 6a1 1 0 01-1.414 0l-6-6a1 1 0 010-1.414z"
            fill="currentColor"
          ></path></svg
      ></span>
    </button>
  </div>
</div>
`;

exports[`Menu tests > a11y and snapshots #2`] = `
<div id="wrapper" style="display: inline-block;">
  <div style="padding: 10px;">
    <a href="#test" class="denhaag-menu-button" title="Label">Label</a>
  </div>
  <div style="padding: 10px;">
    <a
      href="#test"
      class="denhaag-menu-button denhaag-menu-button--active"
      title="Label"
      >Label</a
    >
  </div>
</div>
`;
